--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "resend": "^4.0.1-alpha.0"
   },
   "devDependencies": {
     "@types/node": "^20",
